Сделал:свое исключение, валидацию для серсива и тесты, переделал фильтр и сделал к нему тесты, отредактировал название константы